syntax = "proto3";

package crossplane;

import "crossplane/resource.proto";
import "crossplane/types.proto";
import "validate/validate.proto";

option go_package = "github.com/stroppy-io/stroppy-cloud-panel/internal/proto/crossplane";

message MachineInfo {
    uint32 cores = 1; // in cores
    uint32 memory = 2; // in GB
    uint32 disk = 3; // in GB
}

message Deployment {
    message Strategy {
        message Scripting {
            string cmd = 1 [(validate.rules).string.min_len = 1];
            string workdir = 2 [(validate.rules).string.min_len = 1];
            repeated FsFile files_to_write = 4 [(validate.rules).repeated.min_items = 1];
        }
        message PrebuiltImage {
            string image_id = 1 [(validate.rules).string.min_len = 1];
        }
        string base_image_id = 2 [(validate.rules).string.min_len = 1];
        oneof strategy {
            Scripting scripting = 1;
            PrebuiltImage prebuilt_image = 11;
        }
    }
    message Vm {
        string internal_ip = 4;
        bool public_ip = 5;
        MachineInfo machine_info = 1 [(validate.rules).message.required = true];
        Strategy strategy = 2 [(validate.rules).message.required = true];
        optional SshUser ssh_user = 3;
    }
    message Cluster {
        repeated Vm vms = 2 [(validate.rules).repeated.min_items = 1];
    }
    string id = 1 [(validate.rules).string.min_len = 1];
    SupportedCloud supported_cloud = 2 [(validate.rules).enum.defined_only = true];
    ResourceDag resource_dag = 3 [(validate.rules).message.required = true];
    oneof deployment {
        Vm vm = 100 [(validate.rules).message.required = true];
        Cluster cluster = 101 [(validate.rules).message.required = true];
    }
}
